ui/apps/io.ox/files/style.less
/* ... */
.has-publications {
    width: 27px;
    height: 17px;
    float: left;
    padding-top: 7px;
    margin-right: 0.5em;
}

.mobile-detail-view-wrap {
    margin: 10px 10px 55px 10px;
}

.file-details {

    max-width: 900px;

    .history,
    .versiontable,
    .uploadbutton {
        display: none;
    }

    .versiontable {

        margin-top: 6px;

        .createdby,
        .creationdate,
        .last_modified,
        .size {
            white-space:nowrap;
        }
        .createdby {
            padding-right: 8px;
        }
        .dropdown {
            display: inline-block;
            margin-right: 7px;
            float: left;
        }
    }

    .title {
        margin-bottom: 0.5em;
        word-wrap: break-word;
        outline: 0;
    }

    .description {
        font-family: monospace, 'Courier new';
        white-space: pre-wrap;
        margin: 26px 0;
        min-height: 30px;
    }

    .preview {

        width: 100%;
        margin: 26px 0;

        .preview-plaintext {
            font-family: monospace;
            font-size: 13px;
            width: 100%;
            padding: 13px;
            border: 1px dotted silver;
            white-space: pre-wrap;
            cursor: auto;
            word-break: break-all;
            .user-select(text);
        }
    }

    .comment {
        clear:both;
        padding-top: 8px;
    }

    form {
        margin: 0;

        textarea {
            width: 100%;
            box-sizing: border-box;
        }

        .uploadbutton {
            margin-left: 5px;
        }
    }

    .buttons {
        margin-bottom: 10px;

        a {
            margin-right: 10px;
        }
    }

    .version.info .versionLabel {
        font-weight: bold;
    }

    .version {
        padding: 5px 5px 10px 5px;

        .span6 div a {
            word-break: break-all;
            word-wrap: break-word;
        }

        .dropdown a {
            word-break: break-all;
        }

    }

    .version-comment {
        white-space: pre-wrap;
        color: #888;
    }

    .dragout {
        color: @text-color;
        cursor: pointer;
    }

    .dragout:focus,
    .dragout:hover {
        text-decoration: none;
    }

    .io-ox-inline-links:first-child {
        margin: 0 0 20px 0;
    }

    .modal-header {
        h1 { font-size: 20px;}
    }

}

.create-file {
    .fileForm {
        label {
            display: block;
            margin-bottom: 5px;
        }
    }
}

.dndinfo {
    margin-top: 10px;
}

.vgrid-cell.file {

    display: table-row;
    padding-top: 3px;
    padding-bottom: 3px;

    .vgrid-cell-checkbox {
        padding-top: 9px;
    }

    .name {
        display: table-cell;
        vertical-align: middle;
        white-space: normal;
        height: 3em;
        line-height: 1em;
        word-break: break-word;
    }
}

ul.breadcrumb li.prefix {
    white-space: nowrap;
}

.files-create { margin: 0; }

// small screens

.width-less-than-768 {
    .files-wrapper  {
        .files-container {
            //use two rows
            &.view-list {
                .file-cell {
                    span {
                        line-height: 1.6em;
                    }
                    .title {
                        width: 100%;
                    }
                    .size {
                        float: left;
                        text-align: left;
                    }
                }
            }
        }
    }
}
/* ... */

