Fixed: Bug 36001 - Drive pictures on mobile displayed 2x and buttons overlay the picture
Root cause: tap event triggered twice when clicking on space between title and file size
Solution: ensure detail view is empty when drawing content; adjust style to remove title underline
Resolved state: Fix
Version: 7.6.2
Git repository: wd/frontend/web
Git branch: release-7.6.2
Package name: open-xchange-appsuite

--- a/ui/apps/io.ox/files/style.less
+++ b/ui/apps/io.ox/files/style.less
@@ -644,6 +644,11 @@ ul.breadcrumb li.prefix {
                 .file-cell {
                     span {
                         line-height: 1.6em;
+                        &.not-selectable {
+                            &:hover {
+                                text-decoration: none;
+                            }
+                        }
                     }
                     .title {
                         width: 100%;
